syntax = "proto3";
package inference.inference;

import "inference/inference/random_seed.proto";
import "inference/inference/epoch_group_data.proto";

option go_package = "github.com/productscience/inference/x/inference/types";

// Wrapper message to enable double repeated structure for model-based MLNode organization
message ModelMLNodes {
  repeated MLNodeInfo ml_nodes = 1;
}

// Not added to the Genesis, because at genesis it's constructed based on Participants
message ActiveParticipants {
  repeated ActiveParticipant participants = 1;
  uint64 epoch_group_id = 2; // DEPRECATED: the id of the group entity. Previously the key of the ActiveParticipants entity
  int64 poc_start_block_height = 3;
  int64 effective_block_height = 4;
  int64 created_at_block_height = 5; // Same as effective_block_height???
  uint64 epoch_id = 6; // The current key of the ActiveParticipants entity
}

message ActiveParticipant {
  string index = 1;
  string validator_key = 2;
  int64 weight = 3;
  string inference_url = 4;
  repeated string models = 5;
  RandomSeed seed = 6;
  repeated ModelMLNodes ml_nodes = 7;
}
